GM-10 add tests