@@ -5,6 +5,8 @@ import com.griddynamics.gridmarket.models.Role;
 import com.griddynamics.gridmarket.models.User;
 import com.griddynamics.gridmarket.repositories.UserRepository;
 import java.time.LocalDateTime;
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 import org.springframework.context.annotation.Profile;
@@ -16,11 +18,12 @@ import org.springframework.stereotype.Repository;
 public class InMemoryUserRepository implements UserRepository {
 
   private final List<User> users;
+  private long lastId;
 
   public InMemoryUserRepository() {
     Role adminRole = new Role(1, "ADMIN");
     Role memberRole = new Role(2, "MEMBER");
-    this.users = List.of(
+    this.users = new ArrayList<>(Arrays.asList(
         new User(1, "Ilija", "Mirkovic", "imirkovic", adminRole,
             null, 1500),
         new User(2, "Nemanja", "Mijatovic", "nmijatovic", memberRole,
@@ -29,7 +32,8 @@ public class InMemoryUserRepository implements UserRepository {
             null, 5.5),
         new User(4, "Uros", "Rankovic", "urankovic", memberRole,
             new Ban(1, 1, LocalDateTime.now(), "fraud"), 3)
-    );
+    ));
+    lastId = 4;
   }
 
   @Override
@@ -48,5 +52,13 @@ public class InMemoryUserRepository implements UserRepository {
   @Override
   public Optional<User> findByUsername(String username) {
     return users.stream().filter(user -> user.getUsername().equals(username)).findFirst();
+  }
+
+  @Override
+  public void createMember(String name, String surname, String username) {
+    users.add(
+        new User(++lastId, name, surname, username,
+            new Role(1, "MEMBER"), null, 0))
+    ;
   }
 }
